...
    <string name="AccessType_DOWNLOAD_data_validator" tools:ignore="ExtraTranslation" tools:keep="@string/AccessType_DOWNLOAD_data_validator">net.ibbaa.keepitup.ui.validation.StandardAccessTypeDataValidator</string>
    <string name="AccessType_SNMP" tools:ignore="ExtraTranslation" tools:keep="@string/AccessType_SNMP">SNMP</string>
    <string name="AccessType_SNMP_address" tools:ignore="ExtraTranslation" tools:keep="@string/AccessType_SNMP_address">Host:</string>
    <string name="AccessType_SNMP_port" tools:ignore="ExtraTranslation" tools:keep="@string/AccessType_SNMP_port">Port:</string>
    <string name="AccessType_SNMP_task_validator" tools:ignore="ExtraTranslation" tools:keep="@string/AccessType_SNMP_task_validator">net.ibbaa.keepitup.ui.validation.StandardHostPortValidator</string>
    <string name="AccessType_SNMP_data_validator" tools:ignore="ExtraTranslation" tools:keep="@string/AccessType_SNMP_data_validator">net.ibbaa.keepitup.ui.validation.StandardAccessTypeDataValidator</string>
    <string name="ContextOption_COPY_name" tools:ignore="ExtraTranslation" tools:keep="@string/ContextOption_COPY_name">Copy</string>
    <string name="ContextOption_PASTE_name" tools:ignore="ExtraTranslation" tools:keep="@string/ContextOption_PASTE_name">Paste</string>
    <string name="SNMPVersion_V1_name" tools:ignore="ExtraTranslation" tools:keep="@string/SNMPVersion_V1_name">v1</string>
    <string name="SNMPVersion_V2C_name" tools:ignore="ExtraTranslation" tools:keep="@string/SNMPVersion_V2C_name">v2c</string>
    <string name="SNMPVersion_V3_name" tools:ignore="ExtraTranslation" tools:keep="@string/SNMPVersion_V3_name">v3</string>
    <string name="SNMPTransport_UDP_name" tools:ignore="ExtraTranslation" tools:keep="@string/SNMPTransport_UDP_name">UDP</string>
    <string name="SNMPTransport_TCP_name" tools:ignore="ExtraTranslation" tools:keep="@string/SNMPTransport_TCP_name">TCP</string>
    <string name="SNMPAuthAlgorithm_NONE_name" tools:ignore="ExtraTranslation" tools:keep="@string/SNMPAuthAlgorithm_NONE_name">None</string>
...
